deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dialect-unauth-front-dep
  labels:
    app: dialect-unauth-front-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dialect-unauth-front-app
  template:
    metadata:
      labels:
        app: dialect-unauth-front-app
    spec:
      containers:
      - name: dialect-unauth-front-con
        image: seksuu/dialect-unauth-front:latest
        ports:
        - containerPort: 8082
