service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dialect-unauth-front-svc
  labels:
    app: dialect-unauth-front-app
spec:
  # type: LoadBalancer 
  ports:
  - port: 8082
    targetPort: 8082
    protocol: TCP
  selector:
    app: dialect-unauth-front-app
