ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: dialect-unauth-ingress
  namespace: cmkl
  annotations:
    kubesphere.io/alias-name: ''
    nginx.ingress.kubernetes.io/proxy-body-size: 8m
spec:
  type: LoadBalancer
  tls:
    - hosts:
        - voice.cmkl.ac.th
      secretName: tls-secret-bar
  rules:
    - host: voice.cmkl.ac.th
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              serviceName: dialect-unauth-front-svc
              servicePort: 8082
          - path: /api
            pathType: ImplementationSpecific
            backend:
              serviceName: dialect-unauth-svc
              servicePort: 3001
